--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
 </head>
 <body>
-	
+	<div id="psychicAct">
+    <h1>The Guessing Game</h1>
+    <h3>Wins:
+      <p id="wins"></p>
+    </h3>
+    <h3>Loses:
+      <p id="loses"></p>
+    </h3>
+    <h3>Guess left:
+      <p id="guessLeft"></p>
+    </h3>
+    <p>Guess what letter I'm thinking of:</p>
+    <p id="guessed"></p>
 </body>
 </html>
